# BER_Robot

./: .gitignore  README.md  exampleGPIOApp.cpp  jetsonGPIO.h
doc/: BER_BOM.xlsx  commands.txt
src/arduino_sketches/IrRanger/: IrRanger.ino
src/gscam/examples/: minoru.launch
src/ir_sensor/: CMakeLists.txt  package.xml
src/ir_sensor/include/ir_sensor/: ir_sensor.hpp
src/ir_sensor/src/: ir_sensor.cpp  ir_sensor_main.cpp  jetsonGPIO.cpp
src/jetson_csi_cam/: jetson_csi_cam.launch
src/learning_image_transport/: CMakeLists.txt  package.xml
src/learning_image_transport/cmake/Modules/: FindTensorFlow.cmake
src/learning_image_transport/scripts/models/research/object_detection/: object_detection_node.py  object_detection_tutorial.py  output.avi
src/learning_image_transport/src/: image_subscriber.cpp
src/motor_control/: CMakeLists.txt  package.xml
src/motor_control/include/motor_control/: motor_control.hpp
src/motor_control/launch/: launch_everything.launch
src/motor_control/lunch/: lunch_everything.launch
src/motor_control/scripts/: ros_image_saver.py
src/motor_control/src/: exampleGPIOApp.cpp  jetsonGPIO.cpp  motor_control.cpp
src/stereocamera/: CMakeLists.txt  package.xml
src/stereocamera/src/: stereocamera_broadcast.cpp
